# sudo_poc

./: Cargo.toml  NOTICE
artifacts/: checksums.txt  checksums_intermediate.txt  poc_contract.wasm  poc_contract_v1.wasm  poc_contract_v2.wasm
juno-scripts/: another_get_version.sh  common.sh  deploy.sh  get_version.sh  infinite.sh  migrate.sh
juno-scripts copy/: get_migration_msg.sh  get_state_keys.sh  get_state_size.sh  post_results.sh  store.sh  sudo.sh
scripts/: another_get_version.sh  common.sh  deploy.sh  deploy2.sh  execute.sh  get_migration_msg.sh  get_state_keys.sh  get_state_size.sh  get_version.sh  infinite.sh  migrate.sh  post_results.sh  store.sh  sudo.sh
seda-scripts/: another_get_version.sh  deploy.sh  get_migration_msg.sh  get_state_keys.sh  get_state_size.sh  get_version.sh  infinite.sh  migrate.sh  post_results.sh  store.sh  sudo.sh
terra-scripts/: another_get_version.sh  common.sh  deploy.sh  get_migration_msg.sh  get_state_keys.sh  get_state_size.sh  get_version.sh  infinite.sh  local_setup.sh  migrate.sh  post_results.sh  store.sh  sudo.sh
