[workspace]
resolver = "2"
members = [
    "packages/poc-contract",
    "packages/integration-tests",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.75"
cosmwasm = "0.5"
cosmwasm-schema = "1.2"
cosmwasm-std = { version = "1.4", features = ["staking", "abort"] }
cosmwasm-storage = "1.1.3"
cosmwasm-vm = "1.5"
cw-storage-plus = "1.1"
cw2 = "1.1"
cw-utils = "1.0.1"
hex = "0.4.3"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.107"
sha3 = "0.10.8"
thiserror = { version = "1.0.31" }
poc-contract = { path = "./packages/poc-contract" }
